<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    tools:context="fragments.StatisticsFragment">





    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_left_side"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_right_side"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <TextView
        android:id="@+id/txt_old_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/oldweight"

        app:layout_constraintBottom_toBottomOf="@id/old_weight"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <EditText
        android:id="@+id/old_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:hint="@string/oldweight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <TextView
        android:id="@+id/txt_goal_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/goalweight"

        app:layout_constraintBottom_toBottomOf="@id/goal_weight"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.765" />

    <TextView
        android:id="@+id/txt_current_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/currentweight"

        app:layout_constraintBottom_toBottomOf="@id/current_weight"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.819" />

    <EditText
        android:id="@+id/goal_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:hint="@string/goalweight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="@id/old_weight"
        app:layout_constraintVertical_bias="0.191" />

    <EditText
        android:id="@+id/current_weight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:cursorVisible="true"
        android:hint="@string/currentweight"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="@id/goal_weight"
        app:layout_constraintVertical_bias="0.248" />

    <Button
        android:id="@+id/btn_result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_drawable_button"
        android:text="@string/Update"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toBottomOf="@id/current_weight"
        app:layout_constraintVertical_bias="0.305" />

</androidx.constraintlayout.widget.ConstraintLayout>
