<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink"
    tools:context="fragments.SignUpFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_left_side"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_right_side"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />


    <!-- <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintVertical_bias="0.16"  />-->

    <EditText
        android:id="@+id/Username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Username"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.134" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:cursorVisible="true"
        android:hint="Password"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toTopOf="@id/Username"
        app:layout_constraintVertical_bias="0.16" />

    <LinearLayout
        android:id="@+id/linear1"
        android:orientation="horizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/Password"
        app:layout_constraintBottom_toBottomOf="@id/signup_button"
        app:layout_constraintStart_toStartOf="@id/g_left_side"
        app:layout_constraintEnd_toEndOf="@id/g_right_side">

        <EditText
            android:id="@+id/weigth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="weight"></EditText>

        <EditText
            android:id="@+id/height"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_weight="1"
            android:text="@string/height"></EditText>

    </LinearLayout>


        <RadioButton
            android:id="@+id/rB_female"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/female"
            app:layout_constraintStart_toStartOf="@id/g_left_side"
            app:layout_constraintTop_toBottomOf="@id/Password"
            app:layout_constraintEnd_toEndOf="@id/g_right_side"
            app:layout_constraintBottom_toBottomOf="@id/linear1"
            app:layout_constraintVertical_bias="0.1"
            />


    <Button
        android:id="@+id/signup_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/SignUp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/g_right_side"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/g_left_side"
        app:layout_constraintTop_toBottomOf="@id/Password"
        app:layout_constraintVertical_bias="0.711" />



</androidx.constraintlayout.widget.ConstraintLayout>
